# mc-bedrock-server-manager

./: .gitignore  LICENSE  README.md  backup_behaviour.md  build_installer.py  macros.json
docs/: TODO.txt
endstone-chat-logger/: README.md  pyproject.toml
endstone-chat-logger/src/endstone_chat_logger/: __init__.py  plugin.py
src/: app.py  constants.py  core_manager.py  dialogs.py  headless_manager.py  logger.py  macros.py  mc_bedrock_server_manager.py  mc_bedrock_server_manager_cli.py  properties_file.py  server_validation.py  settings_store.py  theme.py
src/MCBedrockServerManagerConfig/: settings.json
src/WebManager/: __init__.py  realtime.py  server.py
src/WebManager/static/css/: app.css
src/WebManager/static/js/: app.js  minecraft_suggestions.js
src/WebManager/templates/: index.html  layout.html
src/WebManager/templates/partials/: sections.html
src/WebManager/templates/partials/layout/: body_shell_start.html  head.html  modals.html  scripts.html
src/WebManager/templates/partials/sections/: backups.html  console.html  details.html  macros.html  properties.html  settings.html  toolbox.html
